# poselab

./: LICENSE  README.md  old_setup.py  pyproject.toml  setup.py
posefilter/: __init__.py  filter.py  parser.py  reader.py
poselab/: __init__.py  filter.py  pose.py  poseparser.py  visual.py
test/: filter_test.py  test_pipe.py
